# gpt-latex-translator

./: .gitignore  LICENSE  README.md  setup.cfg
gptlatextranslator/: GPTTranslator.py  app.py
