[metadata]
name = gpt-latex-translator
version = 0.0.1
author = Agustin Martinez Sune
author_email = aemartinez@dc.uba.ar
description = "A tool to translate LaTeX documents using OpenAI's GPT-3 API."
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/aemartinez/gpt-latex-translator

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai>=1.0.0
    tiktoken>=0.5.0
    tenacity>=8.2.2
setup_requires =
    setuptools >=38.3.0

[options.entry_points]
console_scripts =
    gpt-translate = gptlatextranslator.app:main